--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
